--- a/index.org
+++ b/index.org
@@ -3,10 +3,28 @@
 #+HTML_HEAD: <link rel="stylesheet" href="/css/stylesheet.css" />
 #+HTML_HEAD: <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
-Welcome. This is my personal blog for all things tech. I like to tinker
-with terminal tools, keyboards, and emacs.
+Over the years of working in software, I've sampled many, many command line and
+keyboard-centric tools. I have a fixation on finding tools that minimize the
+friction between my thoughts and the computer.
 
-** Subjects
+On my journey this has lead me to terminal based workflows using terminal text
+editors, multiplexers, command line chat apps, note taking tools, and much more.
 
-  - [[file:terminal_tooling/index.org][Terminal Tooling]]
-  - [[file:emacs/index.org][Emacs]]
+In this weekly series of articles, I hope to publish deep dives into a variety of
+topics including file managers, core shell commands to help you master your system,
+innovative re-imaginations of those classic commands, and novel tools which aim to
+bring more of your life into the terminal (like note taking, music players, chat
+clients, etc.)
+
+To kick off the inaugural article, I will be taking a look at the terminal file
+manager, [[file:posts/2023_10_06_ranger.org][ranger]].  This will be the first of 4 articles focusing on terminal
+file managers (October is national terminal file manager month...I just decided).
+
+** Posts
+   - [2023-11-17] [[file:posts/2023_11_17_sed_part_2.org][sed (part 2)]]
+   - [2023-11-10] [[file:posts/2023_11_10_sed.org][sed (part 1)]]
+   - [2023-11-03] [[file:posts/2023_11_03_find.org][find]]
+   - [2023-10-27] [[file:posts/2023_10_27_grep.org][grep]]
+   - [2023-10-20] [[file:posts/2023_10_20_vifm.org][Vifm]]
+   - [2023-10-13] [[./posts/2023_10_13_midnight_commander.org][Midnight Commander]]
+   - [2023-10-06] [[file:posts/2023_10_06_ranger.org][Ranger]]
