--- a/index.org
+++ b/index.org
@@ -21,6 +21,7 @@ manager, [[file:posts/2023_10_06_ranger.org][ranger]].  This will be the first o
 file managers (October is national terminal file manager month...I just decided).
 
 ** Posts
+   - [2023-11-22] [[file:posts/2023_11_22_how_this_blog_is_made.org][How this blog is made]]
    - [2023-11-17] [[file:posts/2023_11_17_sed_part_2.org][sed (part 2)]]
    - [2023-11-10] [[file:posts/2023_11_10_sed.org][sed (part 1)]]
    - [2023-11-03] [[file:posts/2023_11_03_find.org][find]]
