--- a/posts/2023_10_06_ranger.org
+++ b/posts/2023_10_06_ranger.org
@@ -3,6 +3,7 @@
 #+HTML_HEAD: <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css" />
 #+HTML_HEAD: <link rel="stylesheet" href="../css/stylesheet.css" />
 #+HTML_HEAD: <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+#+PROPERTY: header-args:sh :results output :exports both :cache yes
 
 * Ranger                                    :file_managers:
   [[https://ranger.github.io/][Ranger]] is a "console file manager with VI key bindings." Specifically it is a terminal
