--- a/posts/2023_10_20_vifm.org
+++ b/posts/2023_10_20_vifm.org
@@ -3,6 +3,7 @@
 #+HTML_HEAD: <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css" />
 #+HTML_HEAD: <link rel="stylesheet" href="../css/stylesheet.css" />
 #+HTML_HEAD: <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+#+PROPERTY: header-args:sh :results output :exports both :cache yes
 
 
 * Vifm                                                        :file_managers:
