--- a/posts/2023_12_01_nb.org
+++ b/posts/2023_12_01_nb.org
@@ -10,11 +10,11 @@
 [[https://xwmx.github.io/nb][nb]] is a swiss army knife of a note taking tool operated entirely[fn:1]
 in within the command line.
 
-When ~nb~ command is your launch pad for everything note related. Without
+The ~nb~ command is your launch pad for everything note related. Without
 arguments ~nb~ shows you an overview of your existing notes or a quick
 cheat sheet of common actions if there are no notes.
 
-#+attr_html: :width 900px
+#+attr_html: :width 1000px
 [[../images/posts/2023_12_01_nb/overview_empty.png]]
 
 Once you've created a few notes, ~nb~ (without arguments) instead displays
@@ -115,6 +115,30 @@ in the notes list, the title is displayed instead of the file name.
 #+attr_html: :width 900px
 [[../images/posts/2023_12_01_nb/add_with_title.png]]
 
+** Tags
+
+  [[https://xwmx.github.io/nb/#-tagging][Tags]] can be added to notes on creation time with the ~--tags~ flag.
+
+  #+attr_html: :width 900px
+  [[../images/posts/2023_12_01_nb/tags_1.png]]
+
+  This will create a file with two tags in it: ~#notes~ and ~#example~.
+
+  #+attr_html: :width 900px
+  [[../images/posts/2023_12_01_nb/tags_2.png]]
+  
+  You can view all the tags you've added to notes in your notebook by just
+  passing the ~--tags~ flag to ~nb~.
+
+  #+attr_html: :width 900px
+  [[../images/posts/2023_12_01_nb/tags_3.png]]
+  
+
+  Tags are a great way of organizing your thoughts, as they provide
+  a way to search for notes using boolean logic (i.e. find my notes
+  with =this= tag but *not* =that= tag). You'll see more of them in the
+  seciton on [[*Search][searching]].
+
 ** Viewing
 
 Creating notes is great, but viewing notes is arguable the only other
@@ -158,7 +182,7 @@ items which match that selector. When the ~--excerpt|-e~ flag is given, it
 will show the first few lines of the item.
 
 #+attr_html: :width 900px
-[[../images/post/2023_12_01_nb/list.png]]
+[[../images/posts/2023_12_01_nb/excerpt.png]]
 
 ~nb~ supports two commands for opening up the note in order to be interacted
 with. ~edit~ does what you should expect, opening up the note in your editor.
@@ -171,6 +195,26 @@ url will be opened in your web browser (more on that in [[*Bookmarks][bookmarks]
 This will open up the file in the configured editor (in my case, emacsclient).
 Once you're done editing, simply save and close the file.
 
+** Browse
+
+  Lastly, ~nb~ supports a terminal note browser (and also a local browser server
+  to view and edit your notes in a web browser). It is started with ~nb browse~
+  or ~nb b~ for short.
+
+  #+attr_html: :width 700px
+  [[../images/posts/2023_12_01_nb/browser_1.png]]
+
+  You can [[*Search][search]] from here as well as select notes to view and even edit.
+  If ~browse~ is ran with the ~--gui~ (or ~-g~ for short) flag, it starts a
+  local webserver so you can view your notes in a web browser.
+
+  #+attr_html: :width 900px
+  [[../images/posts/2023_12_01_nb/browser_2.png]]
+
+
+  I won't go into much further detail on the browser, but if this interests you, you can
+  check it out yourself [[https://xwmx.github.io/nb/#-browsing][here]].
+  
 * Todos
 ~nb~ excels in storing and retrieving notes, but it can handle todo items as
 well. For this, ~nb~ differentiates =todos= from =tasks=. A =todo= is a overall
@@ -329,9 +373,10 @@ folder, a note inside a different notebook's nested folder, etc.
 * Search
 
 ~nb~ has intuitive and powerful search functionality, allowing you to search
-for strings, regexes, tags (not covered in this article, but you should
-check [[https://xwmx.github.io/nb/#-tagging][them]] out), types of notes, and combine all of the above with boolean
-operators: ~--and~ and ~--or~. The subcommand to search is ~search~ or ~q~ for short.
+for strings, regexes, tags (covered briefly in this article, but you should
+check [[https://xwmx.github.io/nb/#-tagging][them]] out in full), types of notes, and combine all of the above with
+Boolean operators: ~--and~ and ~--or~. The sub-command to search is ~search~ or ~q~
+for short.
 
 Searches are performed in the current notebook by default, but like any other
 nb command, can target any notebook and/or folder if desired.
@@ -342,7 +387,8 @@ I won't go much deeper into ~nb~'s search functionality, so you can check it
 out yourself if you're interested. It's very easy to figure out and follows
 intuitive conventions if you've used any searching tool before.
 
-A few examples here taken straight from the docs
+To get a feel for how searches work, here are a few examples taken from
+the docs:
 
 #+begin_src sh :exports code
   # search current notebook for "example query"
@@ -380,18 +426,17 @@ A few examples here taken straight from the docs
 
 ~nb~ is busting at the seams with functionality. This article has covered maybe
 a quarter of all the things it can do. Their [[https://xwmx.github.io/nb/#overview][documentation]] is fantastic and
-covers everything I didn't have to. Additionally the built in help is also
+covers everything I didn't have time to. Additionally the built in help is also
 comprehensive (~nb help~, or just throw a ~--help~ onto any command you're trying
-to work with). Tags are a common organizational feature used to keep the
-notes chaos monster at bay, and ~nb~ supports [[https://xwmx.github.io/nb/#-tagging][them]]. It also supports linking
-notes to each other, a terminal and gui note browser (~nb browse~), syncing
-notes automatically using a git repository, color themes, a robust plugin
-system, importing notes from elsewhere, images, videos, and more.
+to work with). It also supports linking notes to each other (see [[https://xwmx.github.io/nb/#-linking][docs]]), syncing
+notes automatically using a git repository, color themes, a robust plugin system,
+images, videos (~nb import~, [[https://xwmx.github.io/nb/#%EF%B8%8F-import--export][docs]]), and more.
 
-Despite this, I've found working with ~nb~ very pleasant. Commands are well
-documented, arguments are flexible, meaning you don't have to memorize
-the exact order or name of every command; even if you're close, ~nb~ will
-likely understand what you were trying to do, and will do it for you.
+Despite the overwhelming breadth of features, I've found working with ~nb~ very
+pleasant to explore incrementally. Commands are well documented, arguments are
+flexible, meaning you don't have to memorize the exact order or name of every
+command; even if you're close, ~nb~ will likely understand what you were trying
+to do, and will do it for you.
 
 I especially that you can specify your preferred file format; ~nb~ doesn't
 force you to use whichever format they decided is best; you get to choose.[fn:4]
@@ -404,6 +449,10 @@ In a world of cloud only, proprietary solutions, I find myself looking for
 simple solutions using existing and well known technologies with a preference
 for offline first. I want to be able to zip my notes and copy them to another
 computer, or better yet, utilize Dropbox or git to track and transfer changes.
+~nb~ manages syncing behind the scenes for you using git if you provide a remote
+repository for it to sync with. This is the simplest solution to sync I have
+seen. If you're interested in more of the details of ~nb~'s sync functionality,
+see their [[https://xwmx.github.io/nb/#-git-sync][docs]] on the concept.
 
 Even refreshing note taking tools like [[https://obsidian.md/][obsidian]] which store your notes in plain
 markdown on your machine require a paid subscription for access to their sync
