--- a/index.org
+++ b/index.org
@@ -21,6 +21,7 @@ manager, [[file:posts/2023_10_06_ranger.org][ranger]].  This will be the first o
 file managers (October is national terminal file manager month...I just decided).
 
 ** Posts
+   - [2023-12-14] [[file:posts/2023_12_14_fzf.org][fzf]]
    - [2023-12-08] [[file:posts/2023_12_08_jq.org][jq]]
    - [2023-12-01] [[file:posts/2023_12_01_nb.org][nb]]
    - [2023-11-22] [[file:posts/2023_11_22_how_this_blog_is_made.org][How this blog is made]]
